# android-lib

./: .gitmodules  CMakeLists.txt  README.md  libOpenvpn.pro  libOpenvpn_global.h  libopenvpn.cpp  libopenvpn.h
src/: amnezia_ovpn.cpp  amnezia_ovpn.h  amneziainterface.h  amnezianl.cpp  amnezianl.h  amnezianl_global.h
